# rube

./: .gitignore  Cargo.toml  README.md  clone.sh  rustfmt.toml
apiserver/: Cargo.toml
apiserver/src/: main.rs  server.rs
apiserver/src/store/: chdb.rs  mod.rs
proto/rube/: api.proto  util.proto
proto/rube/file/: file.proto
proto/rube/systemd/: unit.proto
rubeapi/: Cargo.toml  build.rs
rubeapi/src/: lib.rs
rubeapi/src/controllers/: mod.rs
rubeapi/src/controllers/systemd/: mod.rs
rubeapi/tests/: unit.rs
ructl/: Cargo.toml
ructl/src/: main.rs
samples/: delete.textproto  get.textproto  list.textproto  object.textproto  patch.textproto  put.textproto  watch.textproto
